# Capstone-project---Blog

./: blog.db  forms.py  main.py  pyproject.toml
templates/: header.html  index.html  login.html  post.html
