[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
WTForms = "^2.3.3"
Flask-WTF = "^0.15.1"
SQLAlchemy = "^1.4.25"
Flask-Bootstrap = "^3.3.7"
Flask-SQLAlchemy = "^2.5.1"
Werkzeug = "^2.0.2"
Flask-Gravatar = "^0.5.0"
Flask-Login = "^0.5.0"
Flask-CKEditor = "^0.4.6"
gunicorn = "^20.1.0"
